# vibenest

./: .gitignore  PROJECT_GUIDE.md  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  seed_db.py
backend/alembic/: env.py
backend/alembic/versions/: 89bba019d9b7_initial.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  chat.py  post.py  user.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  chat.py  social.py  user.py
backend/app/schemas/: __init__.py  chat.py  social.py  user.py
backend/app/services/: chat.py
backend/app/utils/: logging.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_messages.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Navbar.jsx
frontend/src/constants/: api.js
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: Chat.jsx  Home.jsx  Login.jsx  Profile.jsx  Register.jsx
frontend/src/services/: api.js
nginx/: nginx.conf
nginx/conf.d/: default.conf
prometheus/: prometheus.yml
